k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cinenexus-backend-service
  namespace: cinenexus
  labels:
    app: cinenexus-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 7860
      protocol: TCP
      name: http
  selector:
    app: cinenexus-backend
